bpo-34462: _xxsubinterpreters: Add missing NULL check to _copy_raw_string()

Reported by Svace static analyzer.